--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+   <h1>Efeitos Som</h1>
+   <h2>Memes Estranhos</h2> 
+   <section class="teclado">
+    <button class="tecla tecla-som-1"> <img src= "./img/ballin.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/candyland.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "img/chines.jpg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/chinese.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/japanese.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/pinguim.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/rizz.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/superidol.jpeg" </button>
+    <button class="tecla tecla-som-1"> <img src= "./img/whitebird.jpeg" </button>
+
+
+
+   </section>
 </body>
 </html>
